tests/char_set/char_set.exp
Error ------------------------------------------------------------- test.js:14:4

Error: test.js:14
 14:   ("aaaa": $CharSet<"ab">); // error
        ^^^^^^ Cannot cast `"aaaa"` to character set `ab` because string literal `aaaa` [1] is incompatible with character set `ab` [2] since `a` is duplicated.
  References:
   14:   ("aaaa": $CharSet<"ab">); // error
          ^^^^^^ [1]: string literal `aaaa`
   14:   ("aaaa": $CharSet<"ab">); // error
                  ^^^^^^^^^^^^^^ [2]: character set `ab`

Error ------------------------------------------------------------- test.js:15:4

Error: test.js:15
 15:   ("c": $CharSet<"ab">); // error
        ^^^ Cannot cast `"c"` to character set `ab` because string literal `c` [1] is incompatible with character set `ab` [2] since `c` is not a member of the set.
  References:
   15:   ("c": $CharSet<"ab">); // error
          ^^^ [1]: string literal `c`
   15:   ("c": $CharSet<"ab">); // error
               ^^^^^^^^^^^^^^ [2]: character set `ab`

Error ------------------------------------------------------------- test.js:16:4

Error: test.js:16
 16:   ("ac": $CharSet<"ab">); // error
        ^^^^ Cannot cast `"ac"` to character set `ab` because string literal `ac` [1] is incompatible with character set `ab` [2] since `c` is not a member of the set.
  References:
   16:   ("ac": $CharSet<"ab">); // error
          ^^^^ [1]: string literal `ac`
   16:   ("ac": $CharSet<"ab">); // error
                ^^^^^^^^^^^^^^ [2]: character set `ab`

Error ------------------------------------------------------------- test.js:20:9

Error: test.js:20
 20:   new C(x);
             ^ Cannot call `C` with `x` bound to `flags` because string literal `abcd` [1] is incompatible with `C$flags` [2] since `c` is not a member of the set and `d` is not a member of the set.
  References:
   22: g("abcd");
         ^^^^^^ [1]: string literal `abcd`
    3: type C$flags = $CharSet<"ab">
                      ^^^^^^^^^^^^^^ [2]: `C$flags`

Error ------------------------------------------------------------- test.js:25:4

Error: test.js:25
 25:   (x: "foo");
        ^ Cannot cast `x` to string literal `foo` because string [1] is incompatible with string literal `foo` [2].
  References:
   24: function h(x: $CharSet<"ab">) {
                     ^^^^^^^^^^^^^^ [1]: string
   25:   (x: "foo");
             ^^^^^ [2]: string literal `foo`


Found 5 errors
